--- a/cric-apis/appsettings.json
+++ b/cric-apis/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CricDb;User Id=sa;Password=L0rd5@cr1c;Encrypt=False;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
