--- a/cric-api.Models/cric-api.Models.csproj
+++ b/cric-api.Models/cric-api.Models.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\cric-api.DTOs\cric-api.DTOs.csproj" />
+  </ItemGroup>
+  
 </Project>
