--- a/cric-apis/appsettings.json
+++ b/cric-apis/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=CricDb;User Id=sa;Password=L0rd5@cr1c;Encrypt=False;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=localhost,1433;Database=CricDb;User Id=sa;Password=L0rd5@cr1c;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=CricDb;Encrypt=False;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
